<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

        <LinearLayout
            android:id="@+id/login_layout_welcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="24dp"
                android:background="@drawable/launcher_icon"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textColor="@color/colorWhite"
                android:textSize="42sp"
                android:text="@string/welcome_message"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textColor="@color/colorWhite"
                android:alpha="0.5"
                android:textSize="24sp"
                android:text="@string/welcome_description"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="logInMethod"
                android:paddingBottom="6dp"
                android:paddingLeft="42dp"
                android:paddingRight="42dp"
                android:paddingTop="6dp"
                fancy:fb_borderColor="@color/colorWhite"
                fancy:fb_borderWidth="1dp"
                fancy:fb_ghost="true"
                fancy:fb_text="@string/enter_button"
                fancy:fb_textColor="@color/colorWhite"
                fancy:fb_textSize="24sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/progress_bar_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/Widget.ProgressBar.Large"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/wizard_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="24dp"
                android:layout_gravity="center"
                android:background="@drawable/launcher_icon"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="24sp"
                android:textColor="@color/colorWhite"
                android:text="@string/wizard_title"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/wizard_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"
                        android:inputType="text"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textCursorDrawable="@drawable/curson_white"
                        app:backgroundTint="@color/colorWhite"
                        android:hint="@string/wizard_name_input"/>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/wizard_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textCursorDrawable="@drawable/curson_white"
                        app:backgroundTint="@color/colorWhite"
                        android:inputType="textEmailAddress"
                        android:hint="@string/wizard_email_input"/>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/wizard_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textCursorDrawable="@drawable/curson_white"
                        app:backgroundTint="@color/colorWhite"
                        android:inputType="phone"
                        android:hint="@string/wizard_phone_input"/>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/wizard_provider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:visibility="gone"/>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/wizard_uid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:visibility="gone"/>

                </LinearLayout>

            </ScrollView>

            <mehdi.sakout.fancybuttons.FancyButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:onClick="signUpMethod"
                android:paddingLeft="42dp"
                android:paddingRight="42dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                fancy:fb_borderColor="@color/colorWhite"
                fancy:fb_borderWidth="1dp"
                fancy:fb_ghost="true"
                fancy:fb_textColor="@color/colorWhite"
                fancy:fb_text="@string/wizard_register_button"
                fancy:fb_textSize="24sp"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>